--- a/Web.config
+++ b/Web.config
@@ -55,7 +55,7 @@
   <connectionStrings>
     <remove name="umbracoDbDSN" />
     <!--<add name="umbracoDbDSN" connectionString="server=DESKTOP-83C1RSU;database=BizWebsiteDB;user id=sa;password=suraj" providerName="System.Data.SqlClient" />-->
-    <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\BizWebsiteDB.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="umbracoDbDSN" connectionString="server=tcp:manishramanan.database.windows.net,1433;Initial Catalog=Biztechnosys;Persist Security Info=False;User ID=manishramanan15;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"   providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
@@ -80,7 +80,7 @@
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
       <add verb="*" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core " />
     </httpHandlers>
-    <compilation defaultLanguage="c#" debug="true" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
+    <compilation defaultLanguage="c#" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
     <authentication mode="Forms">
       <forms name="yourAuthCookie" loginUrl="login.aspx" protection="All" path="/" />
     </authentication>
