New Build Nov 14 2019

--- a/bin/Biztechnosys.Umbraco.Website.dll.config
+++ b/bin/Biztechnosys.Umbraco.Website.dll.config
@@ -62,6 +62,7 @@
     <remove name="umbracoDbDSN" />
     <!--<add name="umbracoDbDSN" connectionString="server=DESKTOP-83C1RSU;database=BizWebsiteDB;user id=sa;password=suraj" providerName="System.Data.SqlClient" />-->
     <add name="umbracoDbDSN" connectionString="Data Source=|DataDirectory|\BizWebsiteDB.sdf;Flush Interval=1;" providerName="System.Data.SqlServerCe.4.0" />
+    <!--<add name="umbracoDbDSN" connectionString="server=216.218.185.80;Initial Catalog=biztechno;Persist Security Info=False;User ID=kalpesh;Password=vb9dag81985r8dekal;MultipleActiveResultSets=False;Connection Timeout=0;"   providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
