--- a/bin/Biztechnosys.Umbraco.Website.dll.config
+++ b/bin/Biztechnosys.Umbraco.Website.dll.config
@@ -176,11 +176,18 @@
       If you wish to use IIS rewrite rules, see the documentation here:
       https://our.umbraco.com/documentation/Reference/Routing/IISRewriteRules
     -->
-    <!--
-    <rewrite>
-      <rules></rules>
-    </rewrite>
+    <!--This rewrite rule is added by me for siteMap implementation
+    Reference site: https://blog.nicolaayan.com/2018/03/generate-an-umbraco-sitemap/ 
     -->
+    <rewrite>
+      <rules>
+          <rule name="Sitemap XML" enabled="true" stopProcessing="true">
+         <match url="sitemap.xml" />
+         <action type="Rewrite" url="sitemapxml" appendQueryString="false"/>
+      </rule>
+      </rules>
+    </rewrite>
+    
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
