Web Config and Git Ignore

--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--
     Define the web.config template, which is used when creating the initial web.config,
@@ -42,7 +42,7 @@
       <add key="Umbraco.ModelsBuilder.ModelsDirectory" value="~/PublishedContentModels/Generated" />
       <add key="Umbraco.ModelsBuilder.ModelsNamespace" value="ProjectNamespace.PublishedContentModels" />
       <add key="sendEmail" value="true" />
-      <add key="N_Of_Download" value="51" />
+      <add key="N_Of_Download" value="64" />
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
       <add key="DemoForm1" value="https://cors-anywhere.herokuapp.com/https://daily.biztechnosys.com/modules/Webforms/capture.php" />
@@ -55,7 +55,7 @@
   <connectionStrings>
     <remove name="umbracoDbDSN" />
     <!--<add name="umbracoDbDSN" connectionString="server=DESKTOP-83C1RSU;database=BizWebsiteDB;user id=sa;password=suraj" providerName="System.Data.SqlClient" />-->
-    <add name="umbracoDbDSN" connectionString="server=tcp:manishramanan.database.windows.net,1433;Initial Catalog=Biztechnosys;Persist Security Info=False;User ID=manishramanan15;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"   providerName="System.Data.SqlClient" />
+    <add name="umbracoDbDSN" connectionString="server=216.218.185.80;Initial Catalog=biztechno;Persist Security Info=False;User ID=kalpesh;Password=vb9dag81985r8dekal;MultipleActiveResultSets=False;Connection Timeout=1000;"   providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
@@ -169,11 +169,14 @@
       If you wish to use IIS rewrite rules, see the documentation here:
       https://our.umbraco.com/documentation/Reference/Routing/IISRewriteRules
     -->
-    <!--
-    <rewrite>
-      <rules></rules>
+     <rewrite>
+      <rules>
+        <rule name="Sitemap XML" enabled="true" stopProcessing="true">
+          <match url="sitemap.xml" />
+          <action type="Rewrite" url="sitemapxml" appendQueryString="false" />
+        </rule>
+      </rules>
     </rewrite>
-    -->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
