--- a/bin/Biztechnosys.Umbraco.Website.dll.config
+++ b/bin/Biztechnosys.Umbraco.Website.dll.config
@@ -5,29 +5,29 @@
     and then transforms from web.Template.[Debug|Release].config are applied. Documentation
     for web.config at http://our.umbraco.org/documentation/using-umbraco/config-files/#webconfig
   -->
-  
+
   <configSections>
     <section name="clientDependency" type="ClientDependency.Core.Config.ClientDependencySection, ClientDependency.Core" requirePermission="false" />
-  
+
     <sectionGroup name="umbracoConfiguration">
       <section name="settings" type="Umbraco.Core.Configuration.UmbracoSettings.UmbracoSettingsSection, Umbraco.Core" requirePermission="false" />
       <section name="HealthChecks" type="Umbraco.Core.Configuration.HealthChecks.HealthChecksSection, Umbraco.Core" requirePermission="false" />
     </sectionGroup>
-    
+
     <sectionGroup name="imageProcessor">
       <section name="security" requirePermission="false" type="ImageProcessor.Web.Configuration.ImageSecuritySection, ImageProcessor.Web" />
       <section name="processing" requirePermission="false" type="ImageProcessor.Web.Configuration.ImageProcessingSection, ImageProcessor.Web" />
       <section name="caching" requirePermission="false" type="ImageProcessor.Web.Configuration.ImageCacheSection, ImageProcessor.Web" />
     </sectionGroup>
   </configSections>
-  
+
   <umbracoConfiguration>
     <settings configSource="config\umbracoSettings.config" />
     <HealthChecks configSource="config\HealthChecks.config" />
   </umbracoConfiguration>
-  
+
   <clientDependency configSource="config\ClientDependency.config" />
-  
+
   <appSettings file="config/appConfig.config">
     <add key="Umbraco.Core.ConfigurationStatus" value="8.0.2" />
     <add key="Umbraco.Core.ReservedUrls" value="" />
@@ -48,7 +48,7 @@
     <add key="Umbraco.ModelsBuilder.ModelsDirectory" value="~/PublishedContentModels/Generated" />
     <add key="Umbraco.ModelsBuilder.ModelsNamespace" value="ProjectNamespace.PublishedContentModels" />
     <add key="sendEmail" value="true" />
-    <add key="N_Of_Download" value="50" />
+    <add key="N_Of_Download" value="52" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DemoForm1" value="https://cors-anywhere.herokuapp.com/https://daily.biztechnosys.com/modules/Webforms/capture.php" />
@@ -159,6 +159,9 @@
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <remove fileExtension=".json" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+      <!--this below line is added by me to enable catching feature in our website.It can be done by using iis also for all websites but i am doing just for this website hence i used this in webconfig file-->
+      <!--It is not working right now. Fix it or delete this line.-->
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00" />
     </staticContent>
     <!-- Ensure the powered by header is not returned -->
     <httpProtocol>
@@ -176,9 +179,7 @@
       If you wish to use IIS rewrite rules, see the documentation here:
       https://our.umbraco.com/documentation/Reference/Routing/IISRewriteRules
     -->
-    <!--This rewrite rule is added by me for siteMap implementation
-    Reference site: https://blog.nicolaayan.com/2018/03/generate-an-umbraco-sitemap/ 
-    -->
+    <!--
     <rewrite>
       <rules>
           <rule name="Sitemap XML" enabled="true" stopProcessing="true">
@@ -187,7 +188,7 @@
       </rule>
       </rules>
     </rewrite>
-    
+    -->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -234,6 +235,10 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
