--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <!--
     Define the web.config template, which is used when creating the initial web.config,
@@ -152,6 +152,7 @@
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <remove fileExtension=".json" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
     </staticContent>
     <!-- Ensure the powered by header is not returned -->
     <httpProtocol>
