--- a/bin/Biztechnosys.Umbraco.Website.dll.config
+++ b/bin/Biztechnosys.Umbraco.Website.dll.config
@@ -48,7 +48,7 @@
     <add key="Umbraco.ModelsBuilder.ModelsDirectory" value="~/PublishedContentModels/Generated" />
     <add key="Umbraco.ModelsBuilder.ModelsNamespace" value="ProjectNamespace.PublishedContentModels" />
     <add key="sendEmail" value="true" />
-    <add key="N_Of_Download" value="52" />
+    <add key="N_Of_Download" value="53" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DemoForm1" value="https://cors-anywhere.herokuapp.com/https://daily.biztechnosys.com/modules/Webforms/capture.php" />
@@ -87,6 +87,7 @@
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false" />
       <add verb="*" path="DependencyHandler.axd" type="ClientDependency.Core.CompositeFiles.CompositeDependencyHandler, ClientDependency.Core " />
     </httpHandlers>
+    <!--I changed true to false on 19/12/2019. To enable bundling and minification.Make it true if it causes error.-->
     <compilation defaultLanguage="c#" debug="true" batch="true" targetFramework="4.7.2" numRecompilesBeforeAppRestart="50" />
     <authentication mode="Forms">
       <forms name="yourAuthCookie" loginUrl="login.aspx" protection="All" path="/" />
@@ -161,7 +162,7 @@
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <!--this below line is added by me to enable catching feature in our website.It can be done by using iis also for all websites but i am doing just for this website hence i used this in webconfig file-->
       <!--It is not working right now. Fix it or delete this line.-->
-      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="1.00:00:00" />
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="7.00:00:00" />
     </staticContent>
     <!-- Ensure the powered by header is not returned -->
     <httpProtocol>
